tests/NormalTests/paczka1/fuzzy1/39368131.err
Error in line 6: SpZ5fAh S6 67,6
Error in line 8: SpZ5fAh A186 59,1
Error in line 10: SpZ5fAh S6 33,7
Error in line 11: SpZ5fAh S820 10,5
Error in line 15: S6 S947 74,9
Error in line 16: S6 S947 231,4
Error in line 20: S6 S947 24,2
Error in line 21: S6 S947 51,8
Error in line 17: 2FY2o S6 60,4
Error in line 9: yQSDm S6 16,1
Error in line 18: HBXe9U S6 10,9
Error in line 12: YfrUzi S820 31,0
Error in line 29: YfrUzi S947 271,88
Error in line 30: SpZ5fAh A186 21,2
Error in line 26: MHs S820 13,7
